# main_ws

./: .gitignore  README.md  my_map.pgm  my_map.yaml  my_new_map.pgm  my_new_map.yaml
src/dodo_description/: CMakeLists.txt  package.xml
src/dodo_description/cartographer/: a1_cartographer.lua  cartographer.rviz
src/dodo_description/config/: ekf.yaml  nav2_params.yaml  oak_d.yaml  slam.yaml
src/dodo_description/launch/: hardware.launch.xml  model.launch.xml  navigation.launch.xml
src/dodo_description/scripts/: main_controller.py  oak_imu.py  serial_node.py
src/dodo_description/urdf/: model.urdf
